tests/tooling/fixtures/native/recovery/negative/negative_assignment_compound_unknown_target.objc3
// Expected diagnostic code(s): O3S214.
module NegativeAssignmentCompoundUnknownTarget;

fn main() -> i32 {
  value += 1;
  return 0;
}